# test_logserver

./: CMakeLists.txt  README.md  demo_logserver.camkes  system_config.h  test_logserver.camkes
components/APP01/include/: local_log_server.h
components/APP01/src/: local_log_server.c  main.c
components/APP02/: APP02.camkes
components/APP02/src/: main.c
components/APP03/src/: main.c
components/ChanMux/: ChanMux.camkes
components/ChanMux/src/instance/: ChanMux_Instance.c
components/LOG_SERVER/: LOG_SERVER.camkes
components/LOG_SERVER/src/: main.c
components/LogServer/: LogServer.camkes
components/LogServer/src/: LogServer.c  custom_format.c  custom_format.h
components/TIME_SERVER/include/: time_server.h
components/TIME_SERVER/src/: main.c  time_server.c
components/app01/: APP01.camkes
components/app01/src/: local_log_server.c  main.c
components/app02/: APP02.camkes
components/app02/src/: main.c
components/app03/: APP03.camkes
components/app03/src/: main.c
components/app0x/: APP0x.camkes
components/app0x/src/: main.c
components/app_filesystem/: APP_FILESYSTEM.camkes
components/log_client/: LOG_CLIENT.camkes
components/log_clients/FileReaderWriter/: FileReaderWriter.c  FileReaderWriter.camkes
components/log_clients/LogFileReader/: LogFileReader.c  LogFileReader.camkes
components/log_clients/LogsAllLevels/: LogsAllLevels.c  LogsAllLevels.camkes
components/log_clients/SendsIllFormattedString/: SendsIllFormattedString.c  SendsIllFormattedString.camkes
components/log_clients/app0x/: APP0x.camkes
components/log_clients/app_filesystem/: APP_FILESYSTEM.camkes
components/log_clients/log_client/: LOG_CLIENT.camkes  main.c
components/log_server/: LOG_SERVER.camkes
components/log_server/src/: custom_format.c  main.c
components/partition_manager/: PARTITION_MANAGER.camkes
components/partition_manager/src/: main.c
components/test_fixture/ChanMux/: ChanMux.camkes  ChanMux_config.c  ChanMux_upper_interface.camkes
components/test_fixture/ChanMux/src/instance/: ChanMux_Instance.c  ChanMux_config.h
components/test_fixture/Uart/: Uart.camkes
components/test_fixture/partition_manager/: PARTITION_MANAGER.camkes  partition_manager.c  partition_manager.camkes
components/test_fixture/partition_manager/src/: main.c
components/test_fixture/time_server/: TIME_SERVER.camkes  time_server.camkes
components/test_fixture/time_server/src/: main.c
components/test_fixture/time_server/timestamp/: timestamp.c  timestamp.h
components/time_server/: TIME_SERVER.camkes
components/time_server/include/: time_server.h
components/time_server/src/: main.c  time_server.c
components/time_server/timestamp/: timestamp.c
config/: config.h  seos_fs_config.h  seos_log_server_config.h  seos_pm_config.h  seos_timeserver_config.h
interfaces/: ChanMuxInf.camkes  UartInf.camkes  log_server.camkes  partition_manager.camkes  time_server.camkes
seos_log/include/: Debug.h
seos_log/lib/include/: abstract_format.h  abstract_log_output.h  abstract_observer.h  abstract_subject.h  consumer_chain.h  formatT.h  listT.h  log_consumer.h  log_consumer_callback.h  log_databuffer.h  log_emitter.h  log_emitter_callback.h  log_file.h  log_file_client.h  log_file_client_callback.h  log_filter.h  log_format.h  log_observer.h  log_observer_listT.h  log_output.h  log_subject.h  log_symbol.h  symbol.h
seos_log/lib/src/: abstract_observer.c  abstract_subject.c  consumer_chain.c  listT.c  log_consumer.c  log_consumer_callback.c  log_databuffer.c  log_emitter.c  log_emitter_callback.c  log_file.c  log_file_client.c  log_file_client_callback.c  log_filter.c  log_format.c  log_observer.c  log_observer_listT.c  log_output.c  log_subject.c
seos_timestamp/: timestamp.c  timestamp.h
util/: util.c  util.h
